<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:id="@+id/name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:id="@+id/price"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:text="@string/money"/>


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/enter_quantity"/>

            <TextView
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <Button
                android:id="@+id/order"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:text="@string/order" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>